--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-ENDPOINT_CENTRAL_ENDPOINT=
-ZOHO_ACCOUNT_ENDPOINT=
+ENDPOINT_CENTRAL_ENDPOINT=endpointcentral.manageengine.com
+ZOHO_ACCOUNT_ENDPOINT=accounts.zoho.com
 ZOHO_CLIENT_ID=
 ZOHO_CLIENT_SECRET=
 ZOHO_REFRESH_TOKEN=
