--- a/.github/workflows/integration-deployment.yml
+++ b/.github/workflows/integration-deployment.yml
@@ -26,11 +26,11 @@ jobs:
             const versionNumber = tagName.replace("v", "")
             core.setOutput('versionNumber', versionNumber)
       - name: Bump integration deployment version
-        uses: JupiterOne/integration-github-actions/create-integration-deployment@v1
+        uses: JupiterOne/integration-github-actions/create-integration-deployment@v2.0.1
         with:
           integrationName:
             ${{ steps.get-integration-name.outputs.integrationName}}
           releaseNotes: ${{ github.event.release.body }}
-          version: ${{ steps.get-version-number.outputs.versionNumber }}}
+          version: ${{ steps.get-version-number.outputs.versionNumber }}
           githubToken: ${{ secrets.AUTO_GITHUB_PAT_TOKEN }}
           npmAuthToken: ${{ secrets.NPM_AUTH_TOKEN }}
