--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@jupiterone/graph-manageengine-endpoint-central",
   "version": "0.3.1",
   "description": "An integration and graph conversion project for ManageEngine Endpoint Central",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JupiterOne/graph-manageengine-endpoint-central"
+  },
   "license": "MPL-2.0",
   "main": "src/index.js",
   "types": "src/index.d.ts",
