--- a/.github/workflows/integration-deployment.yml
+++ b/.github/workflows/integration-deployment.yml
@@ -9,14 +9,6 @@ jobs:
   j1-integration-deployment:
     runs-on: ubuntu-latest
     steps:
-      - name: Get integration name
-        id: get-integration-name
-        uses: actions/github-script@0.9.0
-        with:
-          script: |
-            const repositoryName = context.payload.repository.name
-            const integrationName = repositoryName.replace("graph-", "")
-            core.setOutput('integrationName', integrationName)
       - name: Get version number
         id: get-version-number
         uses: actions/github-script@0.9.0
@@ -28,9 +20,9 @@ jobs:
       - name: Bump integration deployment version
         uses: JupiterOne/integration-github-actions/create-integration-deployment@v2.0.1
         with:
-          integrationName:
-            ${{ steps.get-integration-name.outputs.integrationName}}
+          integrationName: manage-engine-ec
           releaseNotes: ${{ github.event.release.body }}
           version: ${{ steps.get-version-number.outputs.versionNumber }}
           githubToken: ${{ secrets.AUTO_GITHUB_PAT_TOKEN }}
           npmAuthToken: ${{ secrets.NPM_AUTH_TOKEN }}
+          graphProjectName: manageengine-endpoint-central
