--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -27,7 +27,7 @@ jobs:
         uses: sigstore/cosign-installer@v3
 
       - name: Lowercase the repo name
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+        run: echo "REPO=graph-manage-engine-ec" >>${GITHUB_ENV}
 
       # Login against a Docker registry
       # https://github.com/docker/login-action
